[package]
name = "rust-container-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
caps = "0.5.6"
clap = { version = "4.6.1", features = ["derive"] }
libseccomp = "0.4.0"
nix = { version = "0.31.3", features = ["sched", "mount", "hostname", "process", "fs", "user", "term", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
