[package]
name = "rust-container-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
caps = "0.5.6"
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
libseccomp = "0.4.0"
nix = { version = "0.31.3", features = ["sched", "mount", "hostname", "process", "fs", "user", "term", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
